Bug 956286 - Hand off focus rights to the desktop browser process when launched via the command execute handler. r=bbondy a=metro-only